Thêm tính năng giỏ hàng và cập nhật các file liên quan

--- a/src/main/webapp/css/TrangChu.css
+++ b/src/main/webapp/css/TrangChu.css
@@ -20,6 +20,12 @@
     align-items: center; /* Căn giữa theo chiều dọc */
 }
 
+.card img{
+    height: 416px;
+    width: 416px;
+    object-fit: cover;
+}
+
 .dropdown-menu {
     min-width: 300px;
 }
